18-jan-2025-section-update

--- a/index.html
+++ b/index.html
@@ -52,11 +52,10 @@
         </a>
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="#hero" class="active">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about-us.html">About</a></li>
-            <li><a href="#services">Services</a></li>
+            <li><a href="services">Services</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#team">Team</a></li>
             <li class="dropdown"><a href="#"><span>More</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
                 <li><a href="#">Profile</a></li>
@@ -294,136 +293,129 @@
 <section id="featured-services" class="featured-services section">
 
   <div class="container" data-aos="fade-up" data-aos-delay="100">
+<div class="row g-4">
 
-    <div class="row g-4">
-
-      <!-- Card 1 -->
-      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-        <div class="service-item">
-          <div class="icon dev">
-            <i class="bi bi-stack"></i>
-            <h3>Web Development</h3>
-          </div>
-
-          <p>
-            We build fast, responsive, and scalable websites that work smoothly on every device.
-            Clean code, strong performance, and layouts designed to convert visitors into customers.
-          </p>
-
-          <div class="card-links">
-            <a href="#" class="link-item">
-              Learn More <i class="bi bi-arrow-right"></i>
-            </a>
-          </div>
-        </div>
+  <!-- Card 1 -->
+  <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+    <div class="service-item">
+      <div class="icon dev">
+        <i class="bi bi-stack"></i>
+        <h3>Web Development</h3>
       </div>
 
-      <!-- Card 2 -->
-      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-        <div class="service-item">
-          <div class="icon dev">
-            <i class="bi bi-shield-check"></i>
-            <h3>Secure Systems</h3>
-          </div>
+      <p class="mb-2">
+        We build fast, responsive websites that run smoothly on every device, with clean code and strong performance.
+      </p>
 
-          <p>
-            Your website should be stable, safe, and trustworthy.
-            We apply proven security practices to protect data, prevent vulnerabilities, and keep everything running reliably.
-          </p>
-
-          <div class="card-links">
-            <a href="#" class="link-item">
-              Learn More <i class="bi bi-arrow-right"></i>
-            </a>
-          </div>
-        </div>
+      <div class="card-links">
+        <a href="#" class="link-item">
+          Learn More <i class="bi bi-arrow-right"></i>
+        </a>
       </div>
-
-      <!-- Card 3 -->
-      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-        <div class="service-item">
-          <div class="icon dev">
-            <i class="bi bi-graph-up"></i>
-            <h3>Growth Strategy</h3>
-          </div>
-
-          <p>
-            We don’t guess. We analyze.
-            Data-driven strategies focused on increasing visibility, engagement, and conversions based on your actual business goals.
-          </p>
-
-          <div class="card-links">
-            <a href="#" class="link-item">
-              Learn More <i class="bi bi-arrow-right"></i>
-            </a>
-          </div>
-        </div>
-      </div>
-
-      <!-- Card 4 -->
-      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
-        <div class="service-item">
-          <div class="icon dev">
-            <i class="bi bi-palette2"></i>
-            <h3>UI/UX Design</h3>
-          </div>
-
-          <p>
-            Interfaces built for real users, not just visual appeal.
-            Clear navigation, intuitive layouts, and smooth interactions developed directly in code for accuracy and speed.
-          </p>
-
-          <div class="card-links">
-            <a href="#" class="link-item">
-              Learn More <i class="bi bi-arrow-right"></i>
-            </a>
-          </div>
-        </div>
-      </div>
-
-      <!-- Card 5 -->
-      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
-        <div class="service-item">
-          <div class="icon dev">
-            <i class="bi bi-bar-chart-fill"></i>
-            <h3>SEO & Analytics</h3>
-          </div>
-
-          <p>
-            We optimize your website to rank better and load faster, while tracking real user behavior.
-            Decisions are backed by data, not assumptions.
-          </p>
-
-          <div class="card-links">
-            <a href="#" class="link-item">
-              Learn More <i class="bi bi-arrow-right"></i>
-            </a>
-          </div>
-        </div>
-      </div>
-
-      <!-- Card 6 -->
-      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="700">
-        <div class="service-item">
-          <div class="icon dev">
-            <i class="bi bi-pencil-square"></i>
-            <h3>Content Writing</h3>
-          </div>
-
-          <p>
-            Clear, SEO-friendly content that speaks to users and search engines.
-            No filler text. Just messaging that builds trust and supports your growth strategy.
-          </p>
-
-          <div class="card-links">
-            <a href="#" class="link-item">
-              Learn More <i class="bi bi-arrow-right"></i>
-            </a>
-          </div>
-        </div>
-      </div>
-
     </div>
+  </div>
+
+  <!-- Card 2 -->
+  <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+    <div class="service-item">
+      <div class="icon dev">
+        <i class="bi bi-shield-check"></i>
+        <h3>Secure Systems</h3>
+      </div>
+
+      <p class="mb-2">
+        Your website stays safe and stable with proven security practices to protect data and prevent vulnerabilities.
+      </p>
+
+      <div class="card-links">
+        <a href="#" class="link-item">
+          Learn More <i class="bi bi-arrow-right"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Card 3 -->
+  <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+    <div class="service-item">
+      <div class="icon dev">
+        <i class="bi bi-graph-up"></i>
+        <h3>Growth Strategy</h3>
+      </div>
+
+      <p class="mb-2">
+        We create data-driven strategies to boost visibility, engagement, and conversions based on your business goals.
+      </p>
+
+      <div class="card-links">
+        <a href="#" class="link-item">
+          Learn More <i class="bi bi-arrow-right"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Card 4 -->
+  <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
+    <div class="service-item">
+      <div class="icon dev">
+        <i class="bi bi-palette2"></i>
+        <h3>UI/UX Design</h3>
+      </div>
+
+      <p class="mb-2">
+        We design user-friendly interfaces with clear navigation, intuitive layouts, and smooth interactions for real users.
+      </p>
+
+      <div class="card-links">
+        <a href="#" class="link-item">
+          Learn More <i class="bi bi-arrow-right"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Card 5 -->
+  <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
+    <div class="service-item">
+      <div class="icon dev">
+        <i class="bi bi-bar-chart-fill"></i>
+        <h3>SEO & Analytics</h3>
+      </div>
+
+      <p class="mb-2">
+        We optimize your website to rank higher and track real user behavior to make data-driven decisions effectively.
+      </p>
+
+      <div class="card-links">
+        <a href="#" class="link-item">
+          Learn More <i class="bi bi-arrow-right"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Card 6 -->
+  <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="700">
+    <div class="service-item">
+      <div class="icon dev">
+        <i class="bi bi-pencil-square"></i>
+        <h3>Content Writing</h3>
+      </div>
+
+      <p class="mb-2">
+        We craft clear, SEO-friendly content that speaks to users and search engines, supporting your growth strategy.
+      </p>
+
+      <div class="card-links">
+        <a href="#" class="link-item">
+          Learn More <i class="bi bi-arrow-right"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+</div>
 
   </div>
 
