--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
     <div class="service-item">
       <div class="icon dev">
         <i class="bi bi-palette2"></i>
-        <h3>UI/UX Design</h3>
+        <h3>UX Design</h3>
       </div>
 
       <p class="mb-2">
