--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,14 +18,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   
   <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="../assets/css/main.css" rel="stylesheet">
   
   <style>
     /* Portfolio Gallery Custom Styles */
@@ -292,7 +292,7 @@
     <div class="nav-wrap">
       <div class="container d-flex justify-content-between position-relative">
         <a href="index.html" class="logo d-flex align-items-center">
-          <img src="images/psweb-logo.png" alt="PSWeb Studio logo">
+          <img src="../images/psweb-logo.png" alt="PSWeb Studio logo">
         </a>
         <nav id="navmenu" class="navmenu">
           <ul>
@@ -382,7 +382,7 @@
           <!-- Madhya Pradesh DMC -->
           <div class="portfolio-item travel" data-category="travel">
             <div class="portfolio-image">
-              <img src="images/project-banner/mp.png" alt="Madhya Pradesh DMC">
+              <img src="../images/project-banner/mp.png" alt="Madhya Pradesh DMC">
             </div>
             <div class="portfolio-content">
               <span class="portfolio-category">Travel & Tourism</span>
@@ -407,7 +407,7 @@
           <!-- Andaman Travel Agent -->
           <div class="portfolio-item travel web-app" data-category="travel">
             <div class="portfolio-image">
-              <img src="images/project-banner/andaman-travel-agent.png" alt="Andaman Travel Agent">
+              <img src="../images/project-banner/andaman-travel-agent.png" alt="Andaman Travel Agent">
             </div>
             <div class="portfolio-content">
               <span class="portfolio-category">Travel & Web App</span>
@@ -432,7 +432,7 @@
           <!-- Hotel In Andaman -->
           <div class="portfolio-item travel ecommerce" data-category="travel">
             <div class="portfolio-image">
-              <img src="images/project-banner/hia.png" alt="Hotel In Andaman">
+              <img src="../images/project-banner/hia.png" alt="Hotel In Andaman">
             </div>
             <div class="portfolio-content">
               <span class="portfolio-category">Travel & E-commerce</span>
@@ -457,7 +457,7 @@
           <!-- Andaman Vacations -->
           <div class="portfolio-item travel" data-category="travel">
             <div class="portfolio-image">
-              <img src="images/project-banner/av.png" alt="Andaman Vacations">
+              <img src="../images/project-banner/av.png" alt="Andaman Vacations">
             </div>
             <div class="portfolio-content">
               <span class="portfolio-category">Travel & Tourism</span>
@@ -482,7 +482,7 @@
           <!-- E-commerce Platform -->
           <div class="portfolio-item ecommerce web-app" data-category="ecommerce">
             <div class="portfolio-image">
-              <img src="images/project-banner/ecommerce.jpg" alt="E-commerce Platform">
+              <img src="../images/project-banner/ecommerce.jpg" alt="E-commerce Platform">
             </div>
             <div class="portfolio-content">
               <span class="portfolio-category">E-commerce</span>
@@ -507,7 +507,7 @@
           <!-- Educational Portal -->
           <div class="portfolio-item education web-app" data-category="education">
             <div class="portfolio-image">
-              <img src="images/project-banner/education.jpg" alt="Educational Portal">
+              <img src="../images/project-banner/education.jpg" alt="Educational Portal">
             </div>
             <div class="portfolio-content">
               <span class="portfolio-category">Education</span>
@@ -532,7 +532,7 @@
           <!-- Healthcare System -->
           <div class="portfolio-item healthcare web-app" data-category="healthcare">
             <div class="portfolio-image">
-              <img src="images/project-banner/healthcare.jpg" alt="Healthcare System">
+              <img src="../images/project-banner/healthcare.jpg" alt="Healthcare System">
             </div>
             <div class="portfolio-content">
               <span class="portfolio-category">Healthcare</span>
@@ -557,7 +557,7 @@
           <!-- Corporate Website -->
           <div class="portfolio-item web-app" data-category="web-app">
             <div class="portfolio-image">
-              <img src="images/project-banner/corporate.jpg" alt="Corporate Website">
+              <img src="../images/project-banner/corporate.jpg" alt="Corporate Website">
             </div>
             <div class="portfolio-content">
               <span class="portfolio-category">Corporate</span>
@@ -779,17 +779,17 @@
   </div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/vendor/aos/aos.js"></script>
+  <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="../assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="../assets/js/main.js"></script>
 
   <script>
     // Initialize AOS
