--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -429,7 +429,7 @@
           <!-- Madhya Pradesh DMC -->
           <div class="portfolio-item travel dmc" data-category="travel dmc">
             <div class="portfolio-image">
-              <img src="/images/project-banner/mp.png" alt="Madhya Pradesh DMC Website">
+              <img src="../images/project-banner/mp.png" alt="Madhya Pradesh DMC Website">
               <img src="https://www.google.com/s2/favicons?domain=https://madhyapradeshdmc.com&sz=32" 
                    alt="Madhya Pradesh DMC favicon" 
                    class="portfolio-favicon"
@@ -469,7 +469,7 @@
           <!-- MP DMC -->
           <div class="portfolio-item dmc travel" data-category="dmc travel">
             <div class="portfolio-image">
-              <img src="/images/project-banner/mpdmc.png" alt="MP DMC Website">
+              <img src="../images/project-banner/mpdmc.png" alt="MP DMC Website">
               <img src="https://www.google.com/s2/favicons?domain=https://mpdmc.com&sz=32" 
                    alt="MP DMC favicon" 
                    class="portfolio-favicon"
@@ -508,7 +508,7 @@
           <!-- Hotel In Andaman -->
           <div class="portfolio-item hotel travel" data-category="hotel travel">
             <div class="portfolio-image">
-              <img src="/images/project-banner/hia.png" alt="Hotel In Andaman Website">
+              <img src="../images/project-banner/hia.png" alt="Hotel In Andaman Website">
               <img src="https://www.google.com/s2/favicons?domain=https://hotelinandaman.com&sz=32" 
                    alt="Hotel In Andaman favicon" 
                    class="portfolio-favicon"
@@ -547,7 +547,7 @@
           <!-- Andaman DMC -->
           <div class="portfolio-item dmc travel" data-category="dmc travel">
             <div class="portfolio-image">
-              <img src="/images/project-banner/andaman-dmc.png" alt="Andaman DMC Website">
+              <img src="../images/project-banner/andaman-dmc.png" alt="Andaman DMC Website">
               <img src="https://www.google.com/s2/favicons?domain=https://andamandmc.com&sz=32" 
                    alt="Andaman DMC favicon" 
                    class="portfolio-favicon"
@@ -586,7 +586,7 @@
           <!-- Andaman Travel Agent -->
           <div class="portfolio-item travel" data-category="travel">
             <div class="portfolio-image">
-              <img src="/images/project-banner/andaman-travel-agent.png" alt="Andaman Travel Agent Website">
+              <img src="../images/project-banner/andaman-travel-agent.png" alt="Andaman Travel Agent Website">
               <img src="https://www.google.com/s2/favicons?domain=https://andamantravelagent.com&sz=32" 
                    alt="Andaman Travel Agent favicon" 
                    class="portfolio-favicon"
@@ -625,7 +625,7 @@
           <!-- Andaman Vacations -->
           <div class="portfolio-item travel" data-category="travel">
             <div class="portfolio-image">
-              <img src="/images/project-banner/av.png" alt="Andaman Vacations Website">
+              <img src="../images/project-banner/av.png" alt="Andaman Vacations Website">
               <img src="https://www.google.com/s2/favicons?domain=https://andaman.vacations&sz=32" 
                    alt="Andaman Vacations favicon" 
                    class="portfolio-favicon"
@@ -664,7 +664,7 @@
           <!-- Quest Guide India -->
           <div class="portfolio-item travel" data-category="travel">
             <div class="portfolio-image">
-              <img src="/images/project-banner/qg.png" alt="Quest Guide India Website">
+              <img src="../images/project-banner/qg.png" alt="Quest Guide India Website">
               <img src="https://www.google.com/s2/favicons?domain=https://questguideindia.com&sz=32" 
                    alt="Quest Guide India favicon" 
                    class="portfolio-favicon"
@@ -703,7 +703,7 @@
           <!-- Markaa -->
           <div class="portfolio-item ecommerce" data-category="ecommerce">
             <div class="portfolio-image">
-              <img src="/images/project-banner/markaa.png" alt="Markaa E-commerce Website">
+              <img src="../images/project-banner/markaa.png" alt="Markaa E-commerce Website">
               <img src="https://www.google.com/s2/favicons?domain=https://markaa.in&sz=32" 
                    alt="Markaa favicon" 
                    class="portfolio-favicon"
@@ -742,7 +742,7 @@
           <!-- TSC Barcode Printers -->
           <div class="portfolio-item business" data-category="business">
             <div class="portfolio-image">
-              <img src="/images/project-banner/tsc.png" alt="TSC Barcode Printers Website">
+              <img src="../images/project-banner/tsc.png" alt="TSC Barcode Printers Website">
               <img src="https://www.google.com/s2/favicons?domain=https://tscbarcodeprinters.com&sz=32" 
                    alt="TSC Barcode favicon" 
                    class="portfolio-favicon"
@@ -781,7 +781,7 @@
           <!-- Explore Andaman CRM -->
           <div class="portfolio-item business travel" data-category="business travel">
             <div class="portfolio-image">
-              <img src="/images/project-banner/crm.png" alt="Explore Andaman CRM Website">
+              <img src="../images/project-banner/crm.png" alt="Explore Andaman CRM Website">
               <img src="https://www.google.com/s2/favicons?domain=https://exploreandaman.co.in/crm.html&sz=32" 
                    alt="Explore Andaman CRM favicon" 
                    class="portfolio-favicon"
