--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -257,7 +257,7 @@
 }
 
 .portfolio-link-outline:hover {
-  background: var(--accent-hover-color);
+  background: var(--bs-white);
   color: var(--accent-hover-color);
 }
 
