--- a/portfolio/andaman-dmc.html
+++ b/portfolio/andaman-dmc.html
@@ -31,9 +31,6 @@
   <!-- Main CSS File -->
   <link href="../assets/css/main.css" rel="stylesheet">
   <style>
-    .portfolio-details-page .main {
-      padding-top: 100px;
-    }
 
     .page-title {
       background: linear-gradient(135deg, #2c3e50 0%, #1a252f 100%);
@@ -42,33 +39,7 @@
       margin-bottom: 3rem;
     }
 
-    .page-title .breadcrumbs {
-      margin-bottom: 1rem;
-    }
-
-    .page-title .breadcrumb {
-      background: transparent;
-      padding: 0;
-      margin-bottom: 1rem;
-    }
-
-    .page-title .breadcrumb-item a {
-      color: rgba(255, 255, 255, 0.8);
-      text-decoration: none;
-    }
-
-    .page-title .breadcrumb-item a:hover {
-      color: white;
-    }
-
-    .page-title .breadcrumb-item.active {
-      color: white;
-    }
-
-    .page-title .breadcrumb-item + .breadcrumb-item::before {
-      color: rgba(255, 255, 255, 0.5);
-    }
-
+    
     .page-title .title-wrapper h1 {
       font-size: 2.5rem;
       font-weight: 700;
@@ -240,46 +211,6 @@
       font-weight: 500;
     }
 
-    .portfolio-info .buttons {
-      display: flex;
-      flex-direction: column;
-      gap: 0.75rem;
-    }
-
-    .btn-visit, .btn-github {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      padding: 0.75rem 1.5rem;
-      border-radius: 8px;
-      font-weight: 500;
-      text-decoration: none;
-      transition: all 0.3s ease;
-      text-align: center;
-    }
-
-    .btn-visit {
-      background: #2c3e50;
-      color: white;
-      border: 2px solid #2c3e50;
-    }
-
-    .btn-visit:hover {
-      background: #1a252f;
-      color: white;
-      transform: translateY(-2px);
-    }
-
-    .btn-github {
-      background: transparent;
-      color: #2c3e50;
-      border: 2px solid #2c3e50;
-    }
-
-    .btn-github:hover {
-      background: #2c3e50;
-      color: white;
-    }
 
     .project-challenges ul {
       list-style: none;
@@ -288,7 +219,6 @@
     }
 
     .project-challenges ul li {
-      margin-bottom: 0.75rem;
       display: flex;
       align-items: flex-start;
       gap: 0.75rem;
@@ -757,7 +687,7 @@
               <div class="process-timeline mt-4">
                 <div class="process-step">
                   <div class="step-content mb-4">
-                    <h5><i class="me-2 bi bi-check-circle text-success"></i> Requirements Analysis & Planning</h5>
+                    <h5>Requirements Analysis & Planning</h5>
                     <p>
                       Comprehensive analysis of destination management workflows, stakeholder interviews, 
                       feature prioritization, and technical architecture planning.
@@ -767,7 +697,7 @@
 
                 <div class="process-step">
                   <div class="step-content mb-4">
-                    <h5><i class="me-2 bi bi-check-circle text-success"></i> UI/UX Design & Prototyping</h5>
+                    <h5>UI/UX Design & Prototyping</h5>
                     <p>
                       User journey mapping, wireframing, visual design creation, and interactive prototyping 
                       for both customer-facing and admin interfaces.
@@ -777,7 +707,7 @@
 
                 <div class="process-step">
                   <div class="step-content mb-4">
-                    <h5><i class="me-2 bi bi-check-circle text-success"></i> Backend Development</h5>
+                    <h5>Backend Development</h5>
                     <p>
                       Database design, API development, payment gateway integration, vendor management system, 
                       and booking engine implementation.
@@ -787,7 +717,7 @@
 
                 <div class="process-step">
                   <div class="step-content">
-                    <h5><i class="me-2 bi bi-check-circle text-success"></i> Frontend Development & Testing</h5>
+                    <h5>Frontend Development & Testing</h5>
                     <p>
                       Responsive interface implementation, cross-browser testing, performance optimization, 
                       security testing, and user acceptance testing.
