--- a/portfolio/andaman-dmc.html
+++ b/portfolio/andaman-dmc.html
@@ -184,7 +184,6 @@
     }
 
     .portfolio-info ul li {
-      margin-bottom: 1rem;
       padding-bottom: 1rem;
       border-bottom: 1px solid #f1f1f1;
     }
@@ -310,7 +309,9 @@
       font-size: 1.1rem;
       max-width: 600px;
     }
-
+    .page-title .breadcrumbs .breadcrumb .breadcrumb-item a{
+      color: var(--bs-white);
+    }
     .related-projects-carousel .owl-stage {
       padding: 10px 0;
       display: flex;
@@ -511,8 +512,8 @@
         </div>
 
         <div class="title-wrapper">
-          <h1>Andaman DMC Platform</h1>
-          <p>A comprehensive destination management company platform for Andaman Islands tourism with booking, itinerary planning, and vendor coordination</p>
+          <h1 class="text-white">Andaman DMC Platform</h1>
+          <p class="text-white">A comprehensive destination management company platform for Andaman Islands tourism with booking, itinerary planning, and vendor coordination</p>
         </div>
       </div>
     </div><!-- End Page Title -->
