all-update-done

--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,12 @@
       </div>
     </div>
   </div>
-
+<div class="bg-shape-1">
+     <img src="images/pattern-2.svg" alt="abstract">
+  </div>
+  <div class="bg-shape-2">
+      <img src="images/pattern-3.svg" alt="abstract">
+    </div>
 </section>
 
 <!-- FAQ Section -->
@@ -1139,7 +1144,7 @@
               <h5>Studio</h5>
               <ul class="list-unstyled">
                 <li><a href="about.html">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="portfolio/">Portfolio</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
