--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -383,7 +383,7 @@
             </p>
             <div class="d-flex flex-wrap justify-content-center gap-3">
               <a href="#portfolio-grid" class="btn btn-primary btn-lg px-4">View Projects</a>
-              <a href="contact-us.php" class="btn btn-outline-primary btn-lg px-4">Start Your Project</a>
+              <a href="contact-us.php" class="btn btn-outline-primary btn-lg px-4 bg-white">Start Your Project</a>
             </div>
           </div>
         </div>
