--- a/index.html
+++ b/index.html
@@ -920,9 +920,8 @@
 </section>
 
 
-<section id="call-to-action" class="call-to-action section dark-background">
-
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
+<section>
+  <div  id="call-to-action" class="container call-to-action section" data-aos="fade-up" data-aos-delay="100">
     <div class="cta-wrapper">
       <div class="content-block">
         <div class="row align-items-center">
