--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="images/favico/apple-touch-icon-180x180.png">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <!-- <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
   <link href="assets/css/main.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
@@ -194,15 +192,15 @@
 <!-- About Section -->
 <section id="about" class="about section pb-0">
 
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
+  <div class="container" >
 
     <div class="row g-4 align-items-stretch">
 
-      <div class="col-lg-4 order-lg-2" data-aos="fade-left" data-aos-delay="200">
+      <div class="col-lg-4 order-lg-2">
         <aside class="showcase">
           <figure class="showcase-main">
             <img src="images/right-banner.jpg" alt="Our Journey" class="img-fluid">
-            <figcaption class="badge-note" data-aos="zoom-in" data-aos-delay="350">
+            <figcaption class="badge-note">
               <i class="bi bi-graph-up-arrow"></i>
               <div>
                 <strong>Consistent Growth</strong>
@@ -213,7 +211,7 @@
         </aside>
       </div>
 
-      <div class="col-lg-8 order-lg-1" data-aos="fade-right" data-aos-delay="200">
+      <div class="col-lg-8 order-lg-1">
         <article class="intro-card">
           <div class="intro-head">
             <span class="kicker">
@@ -231,7 +229,7 @@
             </p>
 
             <div class="feature-list row gy-3">
-              <div class="col-md-6" data-aos="fade-up" data-aos-delay="250">
+              <div class="col-md-6" >
                 <div class="feature-item">
                   <i class="bi bi-shield-check"></i>
                   <div class="text">
@@ -243,7 +241,7 @@
                 </div>
               </div>
 
-              <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
+              <div class="col-md-6">
                 <div class="feature-item">
                   <i class="bi bi-palette2"></i>
                   <div class="text">
@@ -256,7 +254,7 @@
               </div>
             </div>
 
-            <div class="metric-band" data-aos="fade-up" data-aos-delay="350">
+            <div class="metric-band">
               <div class="metric">
                 <span class="value">2</span>
                 <span class="label">Freelance Clients</span>
@@ -273,7 +271,7 @@
               </div>
             </div>
 
-            <div class="actions d-flex flex-wrap align-items-center gap-3" data-aos="fade-up" data-aos-delay="400">
+            <div class="actions d-flex flex-wrap align-items-center gap-3" data-aos-delay="400">
               <a href="#" class="btn btn-accent">
                 <i class="bi bi-rocket-takeoff me-1"></i> What We Can Build
               </a>
@@ -292,11 +290,11 @@
 </section>
 <section id="featured-services" class="featured-services section">
 
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
+  <div class="container" >
 <div class="row g-4">
 
   <!-- Card 1 -->
-  <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+  <div class="col-lg-4 col-md-6" >
     <div class="service-item">
       <div class="icon dev">
         <i class="bi bi-stack"></i>
@@ -316,7 +314,7 @@
   </div>
 
   <!-- Card 2 -->
-  <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+  <div class="col-lg-4 col-md-6">
     <div class="service-item">
       <div class="icon dev">
         <i class="bi bi-shield-check"></i>
@@ -336,7 +334,7 @@
   </div>
 
   <!-- Card 3 -->
-  <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+  <div class="col-lg-4 col-md-6">
     <div class="service-item">
       <div class="icon dev">
         <i class="bi bi-graph-up"></i>
@@ -356,7 +354,7 @@
   </div>
 
   <!-- Card 4 -->
-  <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
+  <div class="col-lg-4 col-md-6" data-aos-delay="400">
     <div class="service-item">
       <div class="icon dev">
         <i class="bi bi-palette2"></i>
@@ -376,7 +374,7 @@
   </div>
 
   <!-- Card 5 -->
-  <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
+  <div class="col-lg-4 col-md-6" data-aos-delay="500">
     <div class="service-item">
       <div class="icon dev">
         <i class="bi bi-bar-chart-fill"></i>
@@ -396,7 +394,7 @@
   </div>
 
   <!-- Card 6 -->
-  <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="700">
+  <div class="col-lg-4 col-md-6">
     <div class="service-item">
       <div class="icon dev">
         <i class="bi bi-pencil-square"></i>
@@ -429,14 +427,14 @@
 </section>
 <section id="stats" class="stats section">
 
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
+  <div class="container" >
 
     <div class="row justify-content-center">
       <div class="col-lg-11">
         <div class="stats-board">
 
           <!-- Client Satisfaction -->
-          <article class="stat-tile" data-aos="fade-up" data-aos-delay="150">
+          <article class="stat-tile" data-aos-delay="150">
             <div class="tile-head">
               <i class="bi bi-emoji-smile"></i>
               <div class="label">
@@ -454,7 +452,7 @@
           </article>
 
           <!-- Completed Projects -->
-          <article class="stat-tile" data-aos="fade-up" data-aos-delay="200">
+          <article class="stat-tile">
             <div class="tile-head">
               <i class="bi bi-journal-richtext"></i>
               <div class="label">
@@ -471,7 +469,7 @@
           </article>
 
           <!-- On-Time Delivery -->
-          <article class="stat-tile" data-aos="fade-up" data-aos-delay="250">
+          <article class="stat-tile" >
             <div class="tile-head">
               <i class="bi bi-check2-circle"></i>
               <div class="label">
@@ -489,7 +487,7 @@
           </article>
 
           <!-- Repeat Clients -->
-          <article class="stat-tile" data-aos="fade-up" data-aos-delay="300">
+          <article class="stat-tile">
             <div class="tile-head">
               <i class="bi bi-arrow-repeat"></i>
               <div class="label">
@@ -508,7 +506,7 @@
 
         </div>
 
-        <div class="legend-row" data-aos="fade-down" data-aos-delay="350">
+        <div class="legend-row">
           <div class="legend-item">
             <span class="dot dot-primary"></span>
             <span class="text">Focused on clear goals, timelines, and execution</span>
@@ -528,7 +526,7 @@
 <!-- Skills Section -->
 <section id="skills" class="skills section">
 
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
+  <div class="container" >
 
     <div class="row align-items-center">
 
@@ -541,11 +539,11 @@
           </p>
 
           <div class="certifications">
-            <div class="cert-item" data-aos="fade-right" data-aos-delay="200">
+            <div class="cert-item">
               <i class="bi bi-code-slash"></i>
               <span>Modern Frontend Stack</span>
             </div>
-            <div class="cert-item" data-aos="fade-right" data-aos-delay="250">
+            <div class="cert-item" >
               <i class="bi bi-lightning-charge"></i>
               <span>Performance-Focused Builds</span>
             </div>
@@ -555,8 +553,8 @@
 
       <div class="col-lg-7">
         <div class="skills-grid skills-animation"
-             data-aos="fade-left"
-             data-aos-delay="200"
+            
+            
              id="skills-container">
         </div>
       </div>
@@ -570,18 +568,18 @@
 <section id="features" class="features section grey-background">
 
   <!-- Section Title -->
-  <div class="container section-title" data-aos="fade-up">
+  <div class="container section-title">
     <h2 class="text-black">What Sets PSWeb Studio Apart</h2>
     <p class="text-black">
       Clean code, fast performance, and user-focused interfaces built directly in the browser.
     </p>
   </div>
 
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
+  <div class="container" >
     <div class="row gy-5 align-items-center">
 
       <div class="col-lg-5">
-        <article class="intro-panel bg-white" data-aos="fade-right" data-aos-delay="200">
+        <article class="intro-panel bg-white">
           <figure class="preview-visual mb-4">
             <video 
               class="img-fluid rounded-4 shadow-sm" 
@@ -624,7 +622,7 @@
       <div class="col-lg-7">
         <div class="feature-grid">
 
-          <div class="feature-item" data-aos="zoom-in" data-aos-delay="200">
+          <div class="feature-item" data-aos="zoom-in">
             <div class="f-icon badge-blue">
               <i class="bi bi-layout-text-window-reverse"></i>
             </div>
@@ -639,7 +637,7 @@
             </div>
           </div>
 
-          <div class="feature-item" data-aos="zoom-in" data-aos-delay="250">
+          <div class="feature-item" >
             <div class="f-icon badge-green">
               <i class="bi bi-code-slash"></i>
             </div>
@@ -654,7 +652,7 @@
             </div>
           </div>
 
-          <div class="feature-item" data-aos="zoom-in" data-aos-delay="300">
+          <div class="feature-item" data-aos="zoom-in">
             <div class="f-icon badge-purple">
               <i class="bi bi-phone-fill"></i>
             </div>
@@ -669,7 +667,7 @@
             </div>
           </div>
 
-          <div class="feature-item" data-aos="zoom-in" data-aos-delay="350">
+          <div class="feature-item">
             <div class="f-icon badge-orange">
               <i class="bi bi-lightning-charge-fill"></i>
             </div>
@@ -684,7 +682,7 @@
             </div>
           </div>
 
-          <div class="feature-item" data-aos="zoom-in" data-aos-delay="400">
+          <div class="feature-item" data-aos-delay="400">
             <div class="f-icon badge-cyan">
               <i class="bi bi-cloud-arrow-up-fill"></i>
             </div>
@@ -699,7 +697,7 @@
             </div>
           </div>
 
-          <div class="feature-item" data-aos="zoom-in" data-aos-delay="450">
+          <div class="feature-item" data-aos-delay="450">
             <div class="f-icon badge-pink">
               <i class="bi bi-chat-square-text-fill"></i>
             </div>
@@ -716,7 +714,7 @@
 
         </div>
 
-        <div class="assurance-banner bg-white" data-aos="fade-up" data-aos-delay="480">
+        <div class="assurance-banner bg-white" data-aos-delay="480">
           <div class="assurance-icon">
             <i class="bi bi-award-fill"></i>
           </div>
@@ -739,7 +737,7 @@
 </section>
 
 <section class="container">
-  <div class="container section-title" data-aos="fade-up">
+  <div class="container section-title">
     <h2 class="text-black">Our Portfolio</h2>
     <p class="text-black">
       A selection of real-world web projects built with a focus on performance,
@@ -843,7 +841,7 @@
 </section>
 <!-- Testimonials Section -->
 <section id="testimonials" class="testimonials section light-background">
-  <div class="container section-title" data-aos="fade-up">
+  <div class="container section-title">
     <h2>Client Feedback</h2>
     <p>Real project experiences and outcomes</p>
   </div>
@@ -921,29 +919,29 @@
 
 
 <section>
-  <div  id="call-to-action" class="container call-to-action section" data-aos="fade-up" data-aos-delay="100">
+  <div  class="p-5 container call-to-action section" >
     <div class="cta-wrapper">
       <div class="content-block">
         <div class="row align-items-center">
 
           <div class="col-lg-7">
-            <div class="text-content" data-aos="fade-right" data-aos-delay="200">
+            <div class="text-content">
 
-              <div class="section-label" data-aos="fade-up" data-aos-delay="250">
+              <div class="section-label" >
                 <span>Request a Free Quote</span>
               </div>
 
-              <h2 data-aos="fade-up" data-aos-delay="300">
+              <h2>
                 Build a Website That Actually
                 <span class="accent-text">Performs</span>
               </h2>
 
-              <p data-aos="fade-up" data-aos-delay="350">
+              <p class="text-white">
                 PSWeb Studio focuses on building fast, responsive, and maintainable websites directly in code.
                 Share your requirements and get a clear, no-nonsense quotation based on scope and execution.
               </p>
 
-              <div class="benefits-list" data-aos="fade-up" data-aos-delay="400">
+              <div class="benefits-list" data-aos-delay="400">
                 <div class="benefit-row">
                   <div class="benefit-item">
                     <div class="check-icon">
@@ -974,7 +972,7 @@
                 </div>
               </div>
 
-              <div class="action-group" data-aos="fade-up" data-aos-delay="450">
+              <div class="action-group" data-aos-delay="450">
                 <a href="quotation.html" class="btn btn-primary-action">
                   Get Your Quote
                 </a>
@@ -986,7 +984,7 @@
                 </a>
               </div>
 
-              <div class="trust-indicators" data-aos="fade-up" data-aos-delay="500">
+              <div class="trust-indicators" data-aos-delay="500">
                 <div class="indicator">
                   <div class="metric">25+</div>
                   <div class="label">Projects Delivered</div>
@@ -1007,13 +1005,13 @@
           </div>
 
           <div class="col-lg-5">
-            <div class="visual-section" data-aos="fade-left" data-aos-delay="300">
+            <div class="visual-section">
               <div class="image-container">
                 <img src="images/cta/cta-4.webp"
                      alt="PSWeb Studio Web Development"
                      class="main-visual">
 
-                <div class="floating-badge badge-1" data-aos="zoom-in" data-aos-delay="600">
+                <div class="floating-badge badge-1">
                   <div class="badge-icon">
                     <i class="bi bi-code-slash"></i>
                   </div>
@@ -1023,7 +1021,7 @@
                   </div>
                 </div>
 
-                <div class="floating-badge badge-2" data-aos="zoom-in" data-aos-delay="700">
+                <div class="floating-badge badge-2">
                   <div class="badge-icon">
                     <i class="bi bi-speedometer2"></i>
                   </div>
@@ -1056,7 +1054,7 @@
 
 <!-- FAQ Section -->
 <section id="faq-section" class="faq-section">
-  <div class="container section-title" data-aos="fade-up">
+  <div class="container section-title">
   <h2>Frequently Asked Questions</h2>
   <p>Find answers to the most common questions about our services</p>
 </div><!-- End Section Title -->
@@ -1227,10 +1225,8 @@
    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
